@@ -46,22 +46,12 @@
  * @link       http://phpmd.org
  */
 
-require_once 'PHPUnit/Framework.php';
+require_once dirname(__FILE__) . '/../../AbstractTest.php';
 
-require_once dirname(__FILE__) . '/DepthOfInheritanceTest.php';
-require_once dirname(__FILE__) . '/EvalExpressionTest.php';
-require_once dirname(__FILE__) . '/ExitExpressionTest.php';
-require_once dirname(__FILE__) . '/LongClassTest.php';
-require_once dirname(__FILE__) . '/LongMethodTest.php';
-require_once dirname(__FILE__) . '/LongParameterListTest.php';
-require_once dirname(__FILE__) . '/NpathComplexityTest.php';
-require_once dirname(__FILE__) . '/NumberOfChildrenTest.php';
-require_once dirname(__FILE__) . '/TooManyFieldsTest.php';
-require_once dirname(__FILE__) . '/TooManyMethodsTest.php';
-require_once dirname(__FILE__) . '/WeightedMethodCountTest.php';
+require_once 'PHP/PMD/Rule/Design/DepthOfInheritance.php';
 
 /**
- * Main test suite for the PHP_PMD_Rule_Design package.
+ * Test case for the {@link PHP_PMD_Rule_Design_DepthOfInheritance} class.
  *
  * @category   PHP
  * @package    PHP_PMD
@@ -72,29 +62,56 @@ require_once dirname(__FILE__) . '/WeightedMethodCountTest.php';
  * @version    Release: @package_version@
  * @link       http://phpmd.org
  */
-class PHP_PMD_Rule_Design_AllTests
+class PHP_PMD_Rule_Design_DepthOfInheritanceTest extends PHP_PMD_AbstractTest
 {
     /**
-     * Creates a phpunit test suite.
+     * testRuleNotAppliesToClassWithNumberOfParentLessThanThreshold
      *
-     * @return PHPUnit_Framework_TestSuite
+     * @covers PHP_PMD_Rule_Design_DepthOfInheritance
+     * @group phpmd
+     * @group phpmd::rule
+     * @group phpmd::rule::design
+     * @group unittest
      */
-    public static function suite()
+    public function testRuleNotAppliesToClassWithNumberOfParentLessThanThreshold()
     {
-        $suite = new PHPUnit_Framework_TestSuite('PHP_PMD_Rule_Design - Tests');
+        $rule = new PHP_PMD_Rule_Design_DepthOfInheritance();
+        $rule->setReport($this->getReportMock(0));
+        $rule->addProperty('minimum', '42');
+        $rule->apply($this->getClassMock('dit', 41));
+    }
 
-        $suite->addTestSuite('PHP_PMD_Rule_Design_DepthOfInheritanceTest');
-        $suite->addTestSuite('PHP_PMD_Rule_Design_EvalExpressionTest');
-        $suite->addTestSuite('PHP_PMD_Rule_Design_ExitExpressionTest');
-        $suite->addTestSuite('PHP_PMD_Rule_Design_LongClassTest');
-        $suite->addTestSuite('PHP_PMD_Rule_Design_LongMethodTest');
-        $suite->addTestSuite('PHP_PMD_Rule_Design_LongParameterListTest');
-        $suite->addTestSuite('PHP_PMD_Rule_Design_NpathComplexityTest');
-        $suite->addTestSuite('PHP_PMD_Rule_Design_NumberOfChildrenTest');
-        $suite->addTestSuite('PHP_PMD_Rule_Design_TooManyFieldsTest');
-        $suite->addTestSuite('PHP_PMD_Rule_Design_TooManyMethodsTest');
-        $suite->addTestSuite('PHP_PMD_Rule_Design_WeightedMethodCountTest');
+    /**
+     * testRuleAppliesToClassWithNumberOfParentIdenticalToThreshold
+     *
+     * @covers PHP_PMD_Rule_Design_DepthOfInheritance
+     * @group phpmd
+     * @group phpmd::rule
+     * @group phpmd::rule::design
+     * @group unittest
+     */
+    public function testRuleAppliesToClassWithNumberOfParentIdenticalToThreshold()
+    {
+        $rule = new PHP_PMD_Rule_Design_DepthOfInheritance();
+        $rule->setReport($this->getReportMock(1));
+        $rule->addProperty('minimum', '42');
+        $rule->apply($this->getClassMock('dit', 42));
+    }
 
-        return $suite;
+    /**
+     * testRuleAppliesToClassWithNumberOfParentGreaterThanThreshold
+     *
+     * @covers PHP_PMD_Rule_Design_DepthOfInheritance
+     * @group phpmd
+     * @group phpmd::rule
+     * @group phpmd::rule::design
+     * @group unittest
+     */
+    public function testRuleAppliesToClassWithNumberOfParentGreaterThanThreshold()
+    {
+        $rule = new PHP_PMD_Rule_Design_DepthOfInheritance();
+        $rule->setReport($this->getReportMock(1));
+        $rule->addProperty('minimum', '42');
+        $rule->apply($this->getClassMock('dit', 43));
     }
 }
